modified:   RRHH_backend/.env 	modified:   React_FrontendV2/src/pages/HomePage.jsx

--- a/RRHH_backend/.env
+++ b/RRHH_backend/.env
@@ -1,4 +1,4 @@
 MONGODB_URI="mongodb+srv://webseobilbao:GCjfpC6OP9FSUOUF@rrhhvue.ttu7ud4.mongodb.net/"
 PORT=3200
 MY_SECRET='32we4rd2wqr52rqf`´ç'
-ALLOWED_ROUTES="/,/locations,/login,/assets,/signup,/signin,/logout,/logorrhh.png,/logofooter.png,/bakq.png,/bforualdundia.png,/sucursal.png,/favicon.ico,/ubicacion.svg,/img/rrhh.89865587.png"
+ALLOWED_ROUTES="/,/sucursales,/login,/assets,/signup,/signin,/logout,/logorrhh.png,/logofooter.png,/bakq.png,/bforualdundia.png,/sucursal.png,/favicon.ico,/ubicacion.svg,/img/rrhh.89865587.png"
